[gd_scene load_steps=27 format=3 uid="uid://dgr3blxh4e8q"]

[ext_resource type="Script" uid="uid://d3b68av4gj4kj" path="res://scripts/time_controller.gd" id="1_c6wwm"]
[ext_resource type="Texture2D" uid="uid://djtfpkmmxsw8u" path="res://imgs/UI/goback.png" id="1_ci4ar"]
[ext_resource type="PackedScene" uid="uid://dn57rng00kogb" path="res://scenes/board/square.tscn" id="1_jnyf0"]
[ext_resource type="Script" uid="uid://bt7ifw8cm31m2" path="res://scripts/game_manager.gd" id="1_k8r4w"]
[ext_resource type="Script" uid="uid://bmvb2g4ki1n4g" path="res://scripts/gobackscene.gd" id="1_kymhv"]
[ext_resource type="FontFile" uid="uid://bywim4hbwf77a" path="res://fonts/noto-sans/NotoSans-BlackItalic.ttf" id="1_q07he"]
[ext_resource type="Texture2D" uid="uid://xgvtrnuf8645" path="res://imgs/_6a96927c-b80d-4b77-ae27-1872bd4c2403.jpeg" id="2_kug5n"]
[ext_resource type="Texture2D" uid="uid://cbsve1dbkjrgr" path="res://imgs/UI/back button.png" id="4_kug5n"]
[ext_resource type="Theme" uid="uid://b3kq74llqlv3x" path="res://MinimalUI4/MinimalUI.tres" id="5_dj4mb"]
[ext_resource type="Texture2D" uid="uid://thrr42mhajlv" path="res://imgs/UI/buttons/botones-png-transparente/10-fotor-bg-remover-20250222132458.png" id="6_exf0g"]
[ext_resource type="Script" uid="uid://dlokw6k7h1uqw" path="res://scripts/button_vfx.gd" id="6_rpdi3"]
[ext_resource type="Texture2D" uid="uid://di3gwwo2180dp" path="res://imgs/UI/buttons/botones-png-transparente/00-fotor-bg-remover-20250222131012.png" id="7_dej46"]
[ext_resource type="Texture2D" uid="uid://dxwh348bcjtd1" path="res://imgs/UI/buttons/botones-png-transparente/30-fotor-bg-remover-20250222132520.png" id="10_k8r4w"]
[ext_resource type="Texture2D" uid="uid://byekmrlg6ees4" path="res://imgs/UI/buttons/icons8-reloj-50.png" id="11_kug5n"]
[ext_resource type="AudioStream" uid="uid://be7roxysq0xc0" path="res://sounds/Original_Tetris_theme_Tetris_Soundtrack.wav" id="12_w0prs"]
[ext_resource type="AudioStream" uid="uid://b1k6nssfqv8xj" path="res://sounds/Za_Warudo_-_Sound_Effect.mp3" id="13_hxlvt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dj4mb"]
bg_color = Color(0.868985, 0.868985, 0.868985, 1)

[sub_resource type="Theme" id="Theme_kug5n"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_dj4mb")

[sub_resource type="GDScript" id="GDScript_c6wwm"]
script/source = "extends GridContainer


@onready var slots: Array = get_children()

var actual_texture: Slot
var check_texture: Texture2D

signal gameover

func  _ready() -> void:

	create_texture()

func create_texture()->void:
	var square = TextureManager.generate_texture()
	if(has_slot_in_position(0,int(columns/2.0))):
		var points = collect_points()
		Score.increase_score(points)
		
		emit_signal(\"gameover\",points)
		print(\"game_over\")
	var slot: Slot = get_slot_at_position(0,int(columns/2.0))
	slot.set_square_properties(square)
	slot.square_properties.print_properties()
	set_actual_texture(slot)

func get_slot_at_position(x:int,y:int)->Slot:
	return slots[x*columns+y]

func move_slot(slot: Slot,direction_x: int, direction_y: int):
	var index = get_slot_index(slot)
	if index == -1:
		return
	var new_direction = calculate_new_position(index, direction_x, direction_y)
	
	if !is_within_bounds(new_direction.x, new_direction.y) or has_slot_in_position(new_direction.x,new_direction.y):
		return -1
	return update_slot_properties(slot,new_direction.x, new_direction.y)

func get_slot_index(slot:Slot) -> int:
	var index = slots.find(slot)
	if index == -1:
		print(\"Error: actual_texture no encontrado.\")
	return index

func get_index_position(index: int):
	var current_x:int = int(index / columns)
	var current_y:int = index % columns
	return Vector2(current_x,current_y)

func calculate_new_position(index: int, direction_x: int, direction_y: int) -> Vector2:
	return Vector2(direction_x, direction_y)+get_index_position(index)

func is_within_bounds(x: int, y: int) -> bool:
	return y >= 0 and y < columns and x >= 0 and x < int(slots.size() / columns)


func has_slot_in_position(direction_x: int, direction_y: int) -> bool:
	var neighbor_slot = get_slot_at_position(direction_x, direction_y)
	return neighbor_slot != null and neighbor_slot.get_texture() != null


func update_slot_properties(prev_slot:Slot,x: int, y: int):
	var new_slot = get_slot_at_position(x, y)
	new_slot.set_square_properties(prev_slot.square_properties)
	prev_slot.set_square_properties(null)
	return new_slot

func move_down(slot):
	var movement = move_slot(slot,1,0)
	if(movement is int):
		movement=null
	return movement

func move_left():
	if GlobalTime.TIME_STOPPED == false:
		var movement  = move_slot(actual_texture,0,1)
		if(movement is not int):
			set_actual_texture(movement)

func move_right():
	if GlobalTime.TIME_STOPPED == false:
		var movement = move_slot(actual_texture,0,-1)
		if(movement is not int):
			set_actual_texture(movement)


func on_timeout():
	if(check_texture!=actual_texture.get_texture()):
		create_texture()
	move_all_down()

func move_all_down():
	for i in range(slots.size()-1,0,-1):
		if(slots[i].get_texture()!=null):
			var new_slot = move_down(slots[i])
			if(slots[i]==actual_texture):
				set_actual_texture(new_slot)
				if(new_slot==null):
					create_texture()




func set_actual_texture(slot:Slot):
	if(slot!=null):
		actual_texture = slot
		check_texture = actual_texture.get_texture()

func collect_points() -> int:
	var logos_found = 0

	# Recorremos la matriz por cada slot
	for i in range(slots.size()):
		var slot: Slot = slots[i]
		if slot.get_texture() == null or slot.square_properties == null:
			continue  # Saltar slots vacíos

		# Convertimos el índice al sistema de coordenadas (x, y)
		var position = get_index_position(i)
		var x = position.x
		var y = position.y

		# Verificar que este slot sea un TopLeft
		if slot.square_properties.region != PieceRegion.TOP_LEFT:
			continue

		# Verificar los slots necesarios para el logo
		# 1. Slot a la derecha (TopRight)
		if !is_within_bounds(x, y + 1):
			continue
		var top_right_slot = get_slot_at_position(x, y + 1)
		if top_right_slot.get_texture() == null or top_right_slot.square_properties == null or top_right_slot.square_properties.region != PieceRegion.TOP_RIGHT:
			continue

		# 2. Slot debajo (BottomLeft)
		if !is_within_bounds(x + 1, y):
			continue
		var bottom_left_slot = get_slot_at_position(x + 1, y)
		if bottom_left_slot.get_texture() == null or bottom_left_slot.square_properties == null or bottom_left_slot.square_properties.region != PieceRegion.BOTTOM_LEFT:
			continue

		# 3. Slot diagonal (BottomRight)
		if !is_within_bounds(x + 1, y + 1):
			continue
		var bottom_right_slot = get_slot_at_position(x + 1, y + 1)
		if bottom_right_slot.get_texture() == null or bottom_right_slot.square_properties == null or bottom_right_slot.square_properties.region != PieceRegion.BOTTOM_RIGHT:
			continue

		# Verificar que todas las piezas pertenezcan a la misma facultad
		var faculty = slot.square_properties.faculty
		if top_right_slot.square_properties.faculty != faculty or bottom_left_slot.square_properties.faculty != faculty or bottom_right_slot.square_properties.faculty != faculty:
			continue

		# Si se cumple todo, se encontró un logo
		logos_found += 1


		slot.make_it_gold()

		top_right_slot.make_it_gold()

		bottom_left_slot.make_it_gold()

		bottom_right_slot.make_it_gold()

	return logos_found
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k8r4w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w0prs"]

[sub_resource type="InputEventKey" id="InputEventKey_exf0g"]
device = -1
keycode = 4194319

[sub_resource type="Shortcut" id="Shortcut_dej46"]
events = [SubResource("InputEventKey_exf0g")]

[sub_resource type="InputEventKey" id="InputEventKey_ci4ar"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_exf0g"]
events = [SubResource("InputEventKey_ci4ar")]

[sub_resource type="InputEventKey" id="InputEventKey_k8r4w"]
device = -1
keycode = 4194322

[sub_resource type="Shortcut" id="Shortcut_w0prs"]
events = [SubResource("InputEventKey_k8r4w")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rpdi3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c6wwm"]

[sub_resource type="InputEventKey" id="InputEventKey_kymhv"]
device = -1
keycode = 4194321

[sub_resource type="Shortcut" id="Shortcut_ci4ar"]
events = [SubResource("InputEventKey_kymhv")]

[node name="Board" type="Node2D"]
script = ExtResource("1_k8r4w")

[node name="background" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(244, 381)
texture = ExtResource("2_kug5n")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.095
autostart = true
script = ExtResource("1_c6wwm")
fast_wait_time = 0.1

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="BackButton" type="Button" parent="Canvas"]
offset_left = 1.0
offset_top = 1.0
offset_right = 1254.0
offset_bottom = 639.0
scale = Vector2(0.07, 0.07)
size_flags_horizontal = 3
text = "Atras"
icon = ExtResource("4_kug5n")
flat = true
script = ExtResource("1_kymhv")
prev_scene = "uid://b0ic2ni2kyxy2"

[node name="Game" type="VBoxContainer" parent="Canvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -257.0
offset_right = 152.0
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_dj4mb")

[node name="Header" type="HBoxContainer" parent="Canvas/Game"]
layout_mode = 2

[node name="Points" type="HBoxContainer" parent="Canvas/Game/Header"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Canvas/Game/Header/Points"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="MaxScoreLabel" type="Label" parent="Canvas/Game/Header/Points/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_q07he")
theme_override_font_sizes/font_size = 22
text = "MaxScore:"
horizontal_alignment = 1

[node name="MaxScore" type="Label" parent="Canvas/Game/Header/Points/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_q07he")
theme_override_font_sizes/font_size = 22
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Board" type="GridContainer" parent="Canvas/Game"]
z_index = 100
layout_mode = 2
theme = SubResource("Theme_kug5n")
columns = 7
script = SubResource("GDScript_c6wwm")

[node name="Slot" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot2" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot3" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot4" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot5" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot6" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot7" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot8" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot9" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot10" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot11" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot12" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot13" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot14" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot15" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot16" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot17" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot18" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot19" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot20" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot21" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot22" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot23" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot24" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot25" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot26" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot27" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot28" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot29" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot30" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot31" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot32" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot33" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot34" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot35" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot36" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot37" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot38" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot39" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot40" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot41" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot42" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot43" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot44" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot45" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot46" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot47" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot48" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot49" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot50" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot51" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot52" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot53" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot54" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot55" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot56" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot57" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot58" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot59" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot60" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot61" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot62" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot63" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot64" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot65" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot66" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot67" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot68" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot69" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Slot70" parent="Canvas/Game/Board" instance=ExtResource("1_jnyf0")]
layout_mode = 2

[node name="Separator" type="Control" parent="Canvas/Game"]
layout_mode = 2
size_flags_vertical = 3

[node name="Separator2" type="Control" parent="Canvas/Game"]
layout_mode = 2
size_flags_vertical = 3

[node name="Separator3" type="Control" parent="Canvas/Game"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="Canvas/Game"]
layout_mode = 2
alignment = 1

[node name="Left" type="Button" parent="Canvas/Game/Buttons"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_k8r4w")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_w0prs")
shortcut = SubResource("Shortcut_dej46")
flat = true
script = ExtResource("6_rpdi3")

[node name="TextureRect" type="TextureRect" parent="Canvas/Game/Buttons/Left"]
z_index = 2
layout_mode = 0
offset_left = 8.0
offset_top = -12.0
offset_right = 1008.0
offset_bottom = 968.0
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_exf0g")

[node name="Separator" type="Control" parent="Canvas/Game/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Stop" type="Button" parent="Canvas/Game/Buttons"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_k8r4w")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_w0prs")
shortcut = SubResource("Shortcut_exf0g")
flat = true
script = ExtResource("6_rpdi3")

[node name="TextureRect" type="TextureRect" parent="Canvas/Game/Buttons/Stop"]
layout_mode = 0
offset_left = 8.0
offset_top = -6.0
offset_right = 4104.0
offset_bottom = 4090.0
scale = Vector2(0.01, 0.01)
texture = ExtResource("11_kug5n")

[node name="Separator3" type="Control" parent="Canvas/Game/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Down" type="Button" parent="Canvas/Game/Buttons"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_k8r4w")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_w0prs")
shortcut = SubResource("Shortcut_w0prs")
flat = true
script = ExtResource("6_rpdi3")

[node name="TextureRect" type="TextureRect" parent="Canvas/Game/Buttons/Down"]
z_index = 2
layout_mode = 0
offset_left = 8.0
offset_top = -12.0
offset_right = 1008.0
offset_bottom = 968.0
scale = Vector2(0.05, 0.05)
texture = ExtResource("10_k8r4w")

[node name="Separator3" type="Control" parent="Canvas/Game/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Down" type="Button" parent="Canvas/Game/Buttons"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_k8r4w")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_w0prs")
shortcut = SubResource("Shortcut_w0prs")
flat = true
script = ExtResource("6_rpdi3")

[node name="TextureRect" type="TextureRect" parent="Canvas/Game/Buttons/Down"]
z_index = 2
layout_mode = 0
offset_left = 8.0
offset_top = -12.0
offset_right = 1008.0
offset_bottom = 968.0
scale = Vector2(0.05, 0.05)
texture = ExtResource("10_k8r4w")

[node name="Separator2" type="Control" parent="Canvas/Game/Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Right" type="Button" parent="Canvas/Game/Buttons"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_rpdi3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_c6wwm")
shortcut = SubResource("Shortcut_ci4ar")
text = "->"
flat = true
script = ExtResource("6_rpdi3")

[node name="TextureRect" type="TextureRect" parent="Canvas/Game/Buttons/Right"]
z_index = 2
layout_mode = 0
offset_left = 8.0
offset_top = -12.0
offset_right = 1008.0
offset_bottom = 968.0
scale = Vector2(0.05, 0.05)
texture = ExtResource("7_dej46")

[node name="Background" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_w0prs")
autoplay = true

[node name="ZaWarudo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_hxlvt")

[node name="AcceptDialog" type="ConfirmationDialog" parent="."]
title = "Game Over"
initial_position = 1
size = Vector2i(300, 100)
ok_button_text = "Volver a jugar"
dialog_hide_on_ok = false
dialog_close_on_escape = false
cancel_button_text = "Menu Principal"

[connection signal="stopping_time" from="Timer" to="." method="change_stop_time_texture"]
[connection signal="timeout" from="Timer" to="Canvas/Game/Board" method="on_timeout"]
[connection signal="pressed" from="Canvas/BackButton" to="Canvas/BackButton" method="go_back"]
[connection signal="gameover" from="Canvas/Game/Board" to="." method="on_game_over"]
[connection signal="button_down" from="Canvas/Game/Buttons/Left" to="Canvas/Game/Buttons/Left" method="_on_Button_pressed"]
[connection signal="button_up" from="Canvas/Game/Buttons/Left" to="Canvas/Game/Buttons/Left" method="_on_Button_released"]
[connection signal="pressed" from="Canvas/Game/Buttons/Left" to="Canvas/Game/Board" method="move_right"]
[connection signal="button_down" from="Canvas/Game/Buttons/Stop" to="Canvas/Game/Buttons/Stop" method="_on_Button_pressed"]
[connection signal="button_up" from="Canvas/Game/Buttons/Stop" to="Canvas/Game/Buttons/Stop" method="_on_Button_released"]
[connection signal="pressed" from="Canvas/Game/Buttons/Stop" to="Timer" method="touch_time"]
[connection signal="button_down" from="Canvas/Game/Buttons/Down" to="Timer" method="accelerate"]
[connection signal="button_down" from="Canvas/Game/Buttons/Down" to="Canvas/Game/Buttons/Down" method="_on_Button_pressed"]
[connection signal="button_up" from="Canvas/Game/Buttons/Down" to="Timer" method="normalize"]
[connection signal="button_up" from="Canvas/Game/Buttons/Down" to="Canvas/Game/Buttons/Down" method="_on_Button_released"]
[connection signal="button_down" from="Canvas/Game/Buttons/Right" to="Canvas/Game/Buttons/Right" method="_on_Button_pressed"]
[connection signal="button_up" from="Canvas/Game/Buttons/Right" to="Canvas/Game/Buttons/Right" method="_on_Button_released"]
[connection signal="pressed" from="Canvas/Game/Buttons/Right" to="Canvas/Game/Board" method="move_left"]
[connection signal="canceled" from="AcceptDialog" to="." method="main_menu"]
[connection signal="close_requested" from="AcceptDialog" to="." method="retry"]
[connection signal="confirmed" from="AcceptDialog" to="." method="retry"]

[editable path="Canvas/Game/Board/Slot"]
